--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-nested": "^5.0.6",
     "postcss-simple-vars": "^6.0.3",
     "style-loader": "^3.2.1",
+    "svg-sprite-loader": "^6.0.9",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
